# clipboard-url-logger

./: CMakeLists.txt  README.md  vcpkg.json
res/: appicon.icns  resource.rc
src/: clipboardurllogger.cpp  clipboardurllogger.h  clipboardurlwatcher.cpp  clipboardurlwatcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
